tests/ui/error-messages/missing_struct_field.ko
//@ compile-fail
module missing_field_err {
    meta { purpose: "Error message for missing struct field" }

    struct Config {
        host: String,
        port: Int
    }

    fn main() {
        let c: Config = Config { host: "localhost" }  //~ ERROR: missing field
    }
}
